add  feature: Sale Report and SCM

--- a/MlemMlem/MlemMlem/ViewController/HomeViewController/LoginRestaurant/ControlView/KitchenView/KitchenViewViewController.xib
+++ b/MlemMlem/MlemMlem/ViewController/HomeViewController/LoginRestaurant/ControlView/KitchenView/KitchenViewViewController.xib
@@ -38,7 +38,7 @@
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zzw-3v-MJV">
-                    <rect key="frame" x="0.0" y="124" width="414" height="728"/>
+                    <rect key="frame" x="0.0" y="124" width="414" height="693"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="MrW-fB-NiY">
                             <rect key="frame" x="20" y="20" width="374" height="119"/>
@@ -123,7 +123,7 @@
                             </subviews>
                         </stackView>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Agu-3H-gqP">
-                            <rect key="frame" x="0.0" y="139" width="414" height="589"/>
+                            <rect key="frame" x="0.0" y="139" width="414" height="554"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </tableView>
                     </subviews>
@@ -143,23 +143,72 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
+                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kX0-2e-bSB">
+                    <rect key="frame" x="0.0" y="807" width="414" height="55"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NTz-vu-Gen">
+                            <rect key="frame" x="0.0" y="0.0" width="138" height="55"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="ic_control"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7LG-Uh-SFQ">
+                            <rect key="frame" x="138" y="0.0" width="138" height="55"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="ic_viewOption"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0yh-8v-Wi9">
+                            <rect key="frame" x="276" y="0.0" width="138" height="55"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="ic_share"/>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="55" id="4cM-VF-fxh"/>
+                        <constraint firstItem="NTz-vu-Gen" firstAttribute="width" secondItem="7LG-Uh-SFQ" secondAttribute="width" id="MMk-kk-6MC"/>
+                        <constraint firstItem="NTz-vu-Gen" firstAttribute="width" secondItem="0yh-8v-Wi9" secondAttribute="width" id="TbO-Dq-z2S"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerTop">
+                            <real key="value" value="20"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                            <color key="value" red="0.23137254901960785" green="0.24313725490196078" blue="0.25490196078431371" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                            <size key="value" width="0.0" height="0.0"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                            <real key="value" value="0.5"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                            <real key="value" value="15"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="KlH-tW-6zV"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="GvO-b8-EHt" secondAttribute="bottom" id="AAx-gH-16q"/>
-                <constraint firstItem="KlH-tW-6zV" firstAttribute="bottom" secondItem="zzw-3v-MJV" secondAttribute="bottom" constant="10" id="Hre-GR-msA"/>
+                <constraint firstItem="kX0-2e-bSB" firstAttribute="top" secondItem="zzw-3v-MJV" secondAttribute="bottom" constant="-10" id="CCu-1y-TbK"/>
+                <constraint firstItem="KlH-tW-6zV" firstAttribute="trailing" secondItem="kX0-2e-bSB" secondAttribute="trailing" id="Crx-qN-vyR"/>
                 <constraint firstItem="GvO-b8-EHt" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="cfv-8h-NQA"/>
                 <constraint firstItem="zzw-3v-MJV" firstAttribute="leading" secondItem="KlH-tW-6zV" secondAttribute="leading" id="cie-YF-hT6"/>
                 <constraint firstItem="GvO-b8-EHt" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="dfo-ig-cex"/>
                 <constraint firstAttribute="trailing" secondItem="GvO-b8-EHt" secondAttribute="trailing" id="ePT-LU-4UV"/>
                 <constraint firstItem="KlH-tW-6zV" firstAttribute="trailing" secondItem="zzw-3v-MJV" secondAttribute="trailing" id="fdd-37-kxw"/>
+                <constraint firstItem="KlH-tW-6zV" firstAttribute="bottom" secondItem="kX0-2e-bSB" secondAttribute="bottom" id="hPG-vG-Oj0"/>
+                <constraint firstItem="kX0-2e-bSB" firstAttribute="leading" secondItem="KlH-tW-6zV" secondAttribute="leading" id="k53-eq-tbg"/>
                 <constraint firstItem="zzw-3v-MJV" firstAttribute="top" secondItem="KlH-tW-6zV" secondAttribute="top" constant="80" id="wOR-r0-pqD"/>
             </constraints>
-            <point key="canvasLocation" x="539" y="36"/>
+            <point key="canvasLocation" x="269.56521739130437" y="64.955357142857139"/>
         </view>
     </objects>
     <resources>
+        <image name="ic_control" width="24" height="22"/>
+        <image name="ic_share" width="25" height="25"/>
+        <image name="ic_viewOption" width="25" height="34"/>
         <namedColor name="Gray#4F596A">
             <color red="0.30980392156862746" green="0.34901960784313724" blue="0.41568627450980394" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
