--- a/MlemMlem/MlemMlem/ViewController/HomeViewController/LoginRestaurant/SCM/SCMViewController.xib
+++ b/MlemMlem/MlemMlem/ViewController/HomeViewController/LoginRestaurant/SCM/SCMViewController.xib
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Inter-Bold.ttf">
+            <string>Inter-Bold</string>
+        </array>
+        <array key="Inter-Medium.ttf">
+            <string>Inter-Medium</string>
+        </array>
+        <array key="Inter-Regular.ttf">
+            <string>Inter-Regular</string>
+        </array>
+        <array key="Inter-SemiBold.ttf">
+            <string>Inter-SemiBold</string>
+        </array>
+    </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SCMViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SCMViewController" customModule="MlemMlem" customModuleProvider="target">
             <connections>
                 <outlet property="pageView_ExpectedDish" destination="zUb-Yn-rEG" id="Ydd-Du-WnQ"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="view_background" destination="aBL-dK-HJR" id="LkG-jG-8IT"/>
+                <outlet property="view_expectedRevenue" destination="tfm-QD-Kqn" id="QnU-4v-OD8"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -19,12 +37,6 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0OG-AN-M68">
-                    <rect key="frame" x="10" y="437.5" width="394" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" systemColor="systemBlueColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aBL-dK-HJR" customClass="BackgroundView" customModule="MlemMlem" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -204,7 +216,9 @@
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
+                                                <constraint firstItem="gMr-od-qGL" firstAttribute="leading" secondItem="tZ6-gJ-mXn" secondAttribute="leading" constant="20" id="SK0-yH-GLW"/>
                                                 <constraint firstItem="gMr-od-qGL" firstAttribute="leading" secondItem="tZ6-gJ-mXn" secondAttribute="leading" constant="20" id="eqR-uR-hAE"/>
+                                                <constraint firstAttribute="trailing" secondItem="gMr-od-qGL" secondAttribute="trailing" constant="20" id="hzk-13-oi5"/>
                                                 <constraint firstItem="gMr-od-qGL" firstAttribute="top" secondItem="tZ6-gJ-mXn" secondAttribute="top" id="jey-fF-J1c"/>
                                                 <constraint firstAttribute="bottom" secondItem="gMr-od-qGL" secondAttribute="bottom" id="may-m8-LDb"/>
                                                 <constraint firstAttribute="trailing" secondItem="gMr-od-qGL" secondAttribute="trailing" constant="20" id="uik-LA-Wf3"/>
@@ -427,17 +441,39 @@
             <viewLayoutGuide key="safeArea" id="KlH-tW-6zV"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="0OG-AN-M68" secondAttribute="trailing" constant="10" id="NkK-MU-M74"/>
-                <constraint firstItem="0OG-AN-M68" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="aE1-3S-b8b"/>
-                <constraint firstItem="0OG-AN-M68" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="nlM-k7-FzL"/>
+                <constraint firstAttribute="bottom" secondItem="aBL-dK-HJR" secondAttribute="bottom" id="8ED-0q-931"/>
+                <constraint firstItem="tGt-Mm-PU4" firstAttribute="top" secondItem="KlH-tW-6zV" secondAttribute="top" constant="60" id="B0B-pj-fvC"/>
+                <constraint firstItem="KlH-tW-6zV" firstAttribute="bottom" secondItem="tGt-Mm-PU4" secondAttribute="bottom" id="Lh2-g0-NEB"/>
+                <constraint firstItem="aBL-dK-HJR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="QKR-yR-1ZO"/>
+                <constraint firstItem="tGt-Mm-PU4" firstAttribute="leading" secondItem="KlH-tW-6zV" secondAttribute="leading" id="XNt-IG-cJ1"/>
+                <constraint firstItem="aBL-dK-HJR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="eJ5-Ug-WG5"/>
+                <constraint firstAttribute="trailing" secondItem="aBL-dK-HJR" secondAttribute="trailing" id="mv4-mZ-SbK"/>
+                <constraint firstItem="KlH-tW-6zV" firstAttribute="trailing" secondItem="tGt-Mm-PU4" secondAttribute="trailing" id="rMc-I7-vUi"/>
             </constraints>
-            <point key="canvasLocation" x="33.5" y="54.5"/>
-            <point key="canvasLocation" x="354" y="-39"/>
+            <point key="canvasLocation" x="-171.01449275362319" y="-17.410714285714285"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Gray#4F596A">
+            <color red="0.30980392156862746" green="0.34901960784313724" blue="0.41568627450980394" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Gray#7A8598">
+            <color red="0.47843137254901963" green="0.52156862745098043" blue="0.59607843137254901" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Gray#D2DAE3">
+            <color red="0.82352941176470584" green="0.85490196078431369" blue="0.8901960784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Gray#EEF1F5">
+            <color red="0.93333333333333335" green="0.94509803921568625" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Gray#F4F4F7">
+            <color red="0.95686274509803926" green="0.95686274509803926" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Orange#FE7A3E">
+            <color red="0.99599999189376831" green="0.4779999852180481" blue="0.24300000071525574" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
